# Picocalc-Omnitool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf.h  lv_port_disp_picocalc_ILI9488.h  lv_port_indev_picocalc_kb.h  lwipopts.h  main.c  ui_screens.c  ui_screens.h  version.h.in  wifi_config.c  wifi_config.h
i2ckbd/: CMakeLists.txt  i2ckbd.c  i2ckbd.h
include/: api_tokens.h.template  ble_config.h  lv_port_disp_picocalc_ILI9488.h  lv_port_indev_picocalc_kb.h  mbedtls_config.h  news_api.h  ntp_client.h  psram_helper.h  telegram_api.h  ui_screens.h  weather_api.h
lcdspi/: CMakeLists.txt  lcdspi.c  lcdspi.h
src/: ble_config.c  lv_port_disp_picocalc_ILI9488.c  lv_port_indev_picocalc_kb.c  main.c  news_api.c  ntp_client.c  psram_helper.c  telegram_api.c  ui_screens.c  weather_api.c  wifi_config.c
